unpackaged/main/default/objects/Auction__c/Auction__c.object-meta.xml
<CustomObject>
    <label>Конкурс</label>
    <nameField>
        <displayFormat>Конкурс-{00000000}</displayFormat>
        <label>Номер конкурса</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Конкурсы</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>