unpackaged/main/default/objects/Auction__c/fields/AuctionName__c.field-meta.xml
<CustomField>
    <fullName>AuctionName__c</fullName>
    <label>Наименование заказа</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>