unpackaged/main/default/objects/Auction__c/fields/AuctionNumber__c.field-meta.xml
<CustomField>
    <fullName>AuctionNumber__c</fullName>
    <label>Номер заказа на сайте госзакупок</label>
    <length>32</length>
    <type>Text</type>
</CustomField>