unpackaged/main/default/objects/Auction__c/fields/AuctionRegion__c.field-meta.xml
<CustomField>
    <fullName>AuctionRegion__c</fullName>
    <label>Регион</label>
    <length>255</length>
    <type>Text</type>
</CustomField>