unpackaged/main/default/objects/Auction__c/fields/AuctionStatus__c.field-meta.xml
<CustomField>
    <fullName>AuctionStatus__c</fullName>
    <label>Статус</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Не просмотрен</fullName>
                <default>true</default>
                <label>Не просмотрен</label>
            </value>
            <value>
                <fullName>Не профиль</fullName>
            </value>
            <value>
                <fullName>Конвертирован в проект</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>