unpackaged/main/default/objects/Auction__c/fields/AuctionURLLink__c.field-meta.xml
<CustomField>
    <fullName>AuctionURLLink__c</fullName>
    <label>Ссылка на сайт госзакупок</label>
    <type>Url</type>
</CustomField>