unpackaged/main/default/objects/Auction__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Комментарий</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>