unpackaged/main/default/objects/Auction__c/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Конкурс</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Конкурсы</relationshipLabel>
    <relationshipName>mDWr</relationshipName>
    <type>Lookup</type>
</CustomField>