unpackaged/main/default/objects/Auction__c/listViews/AllAuctionsView.listView-meta.xml
<ListView>
    <fullName>AllAuctionsView</fullName>
    <columns>NAME</columns>
    <columns>AuctionName__c</columns>
    <columns>AuctionRegion__c</columns>
    <columns>AuctionStatus__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Все конкурсы</label>
    <language>ru</language>
</ListView>