unpackaged/main/default/objects/Auction__c/listViews/AllUnviewedAuctionsView.listView-meta.xml
<ListView>
    <fullName>AllUnviewedAuctionsView</fullName>
    <columns>NAME</columns>
    <columns>UserTION__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AuctionStatus__c</field>
        <operation>equals</operation>
        <value>Не просмотрен</value>
    </filters>
    <label>Все непросмотренные конкурсы</label>
    <language>ru</language>
</ListView>