unpackaged/main/default/objects/Auction__c/listViews/MyAuctions.listView-meta.xml
<ListView>
    <fullName>MyAuctions</fullName>
    <columns>NAME</columns>
    <columns>AuctionName__c</columns>
    <columns>AuctionRegion__c</columns>
    <columns>AuctionURLLink__c</columns>
    <filterScope>Mine</filterScope>
    <label>Мои конкурсы</label>
    <language>ru</language>
</ListView>