unpackaged/main/default/objects/Auction__c/listViews/MyNonviewedAuctionsView.listView-meta.xml
<ListView>
    <fullName>MyNonviewedAuctionsView</fullName>
    <columns>NAME</columns>
    <columns>AuctionName__c</columns>
    <columns>AuctionRegion__c</columns>
    <columns>AuctionURLLink__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>AuctionStatus__c</field>
        <operation>equals</operation>
        <value>Не просмотрен</value>
    </filters>
    <label>Мои непросмотренные конкурсы</label>
    <language>ru</language>
</ListView>